--- a/package.json
+++ b/package.json
@@ -6,49 +6,57 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "postinstall": "patch-package"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.0",
+    "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "7.7.0",
-    "@react-native-community/geolocation": "^3.0.6",
+    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-community/geolocation": "^3.2.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "2.7.5",
-    "@react-navigation/bottom-tabs": "^6.5.8",
-    "@react-navigation/elements": "^1.3.21",
-    "@react-navigation/native": "^6.1.7",
-    "@react-navigation/stack": "^6.3.17",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/elements": "^1.3.30",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.8",
-    "bcrypt": "^5.1.0",
-    "expo": "~51.0.2",
+    "bcrypt": "^5.1.1",
+    "expo": "~51.0.8",
+    "expo-file-system": "~17.0.1",
     "expo-location": "~17.0.1",
     "expo-secure-store": "~13.0.1",
     "expo-status-bar": "~1.12.1",
-    "formik": "^2.4.3",
-    "jsonwebtoken": "^9.0.1",
+    "formik": "^2.4.6",
+    "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
+    "nodemailer": "^6.9.13",
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0",
     "react": "^18.2.0",
-    "react-hook-form": "^7.45.3",
-    "react-native": "0.74.1",
+    "react-hook-form": "^7.51.4",
+    "react-native": "^0.74.1",
     "react-native-base64": "^0.2.1",
     "react-native-fast-image": "^8.6.3",
-    "react-native-fetch-blob": "^0.10.8",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-image-picker": "^7.0.3",
+    "react-native-gesture-handler": "~2.16.2",
+    "react-native-image-picker": "^7.1.2",
     "react-native-maps": "1.14.0",
-    "react-native-reanimated": "^3.11.0",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-vector-icons": "^10.0.0",
-    "react-native-vision-camera": "^4.0.3",
+    "react-native-vector-icons": "^10.1.0",
     "react-navigation": "^4.4.4",
     "rethrow": "^0.2.3",
     "rn-fetch-blob": "^0.12.0",
-    "yup": "^1.2.0"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.0"
+    "@babel/core": "^7.24.5",
+    "@babel/plugin-transform-class-properties": "^7.24.1",
+    "@babel/plugin-transform-logical-assignment-operators": "^7.24.1",
+    "cosmiconfig": "^9.0.0",
+    "expo-module-scripts": "^3.5.1"
   },
   "private": true,
   "keywords": [],
